Fixed contrast for cart items list

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -136,8 +136,8 @@ nav a {
   width: 98%;
 } 
 .cartList .theList li {
-  color: #373737;
-  background-color: rgba(255, 255, 255, 0.5);
+  color: #FFFFFF;
+  background-color: rgba(183, 183, 183, 0.5);
   padding: 15px;
   margin-bottom: 15px;
   border-radius: 5px;
